# WordVoice-main

./: README.md  download_models.py  download_models.sh  pyproject.toml  requirements.txt  wordvoice_infer.py
CosyVoice/: example.py
CosyVoice/cosyvoice/cli/: cosyvoice.py  frontend.py  model.py
CosyVoice/cosyvoice/dataset/: dataset.py  processor.py
CosyVoice/cosyvoice/flow/: flow.py
CosyVoice/cosyvoice/llm/: llm.py  wordvoice_llm.py
CosyVoice/cosyvoice/transformer/: label_smoothing_loss.py
CosyVoice/cosyvoice/utils/: common.py  executor.py  losses.py  train_utils.py
config/: wordvoice.yaml
train_code/wordvoice/: path.sh  run_wordvoice.sh
train_code/wordvoice/config/: wordvoice.yaml
xxh_tools/: en_punc.py  get_dsp.py  get_timestamp_mmsfa.py  zh_punc.py
xxh_tools/data_tools/: extract_embedding.py  extract_speech_token.py  make_base_parquet.py  prepare_data.py
