[project]
name = "WordVoice-main"
version = "0.1.0"
description = "WordVoice: Explicit and Decoupled Multi-Dimensional Word-Level Control for LLM-Based Text-to-Speech"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "torch==2.3.1",
    "torchaudio==2.3.1",
    "cn2an==0.5.23",
    "conformer==0.3.2",
    "cython==3.2.4",
    "deepspeed==0.15.1",
    "diffusers==0.29.0",
    "einops==0.8.2",
    "gdown==6.1.0",
    "httpx==0.28.1",
    "hyperpyyaml==1.2.3",
    "inflect==7.3.1",
    "jiwer==4.0.0",
    "kaldialign==0.12.0",
    "librosa==0.10.2",
    "lightning==2.2.4",
    "matplotlib==3.7.5",
    "modelscope==1.20.0",
    "omegaconf==2.3.0",
    "onnxruntime_gpu==1.18.0",
    "openai_whisper==20250625",
    "phonemizer==3.3.0",
    "piper_phonemize==1.1.0",
    "pyarrow",
    "pypinyin==0.55.0",
    "pyworld==0.3.4",
    "PyYAML==6.0.3",
    "regex==2026.4.4",
    "rich==15.0.0",
    "rootutils==1.0.7",
    "s3tokenizer==0.3.0",
    "safetensors==0.8.0",
    "setuptools==65.0.0",
    "sherpa_onnx==1.13.3",
    "soundfile==0.12.1",
    "tensorrt_cu12==10.13.3.9",
    "tiktoken==0.12.0",
    "tn==0.0.5",
    "torchcrepe==0.0.24",
    "tqdm==4.67.3",
    "transformers==4.51.3",
    "tritonclient==2.70.0",
    "ttsfrd==0.1.0",
    "Unidecode==1.4.0",
    "uvicorn==0.49.0",
    "verl==0.8.0",
    "wandb==0.28.0",
    "wetext==0.0.4",
    "wget==3.2",
    "zhon==2.1.1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["CosyVoice*", "xxh_tools*"]  # 明确指定只打包这两个目录及其子目录
